--- a/R_Rstudio_Rmarkdown.Rmd
+++ b/R_Rstudio_Rmarkdown.Rmd
@@ -34,4 +34,6 @@ After that you'll need to restart Rstudio and run: tinytex::install_tinytex()
 Try it with this Rmarkdown document, as you will need to create pdf outputs to submit your assignments. 
 
 
-
+git add R_Rstudio_Rmarkdown.Rmd
+git commit -m "R_Rstudio_Rmarkdown.Rmd"
+git push origin main
